--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,3 +39,28 @@
 .read-the-docs {
   color: #888;
 }
+
+.syntax-highlighter-container {
+  position: relative;
+}
+
+.copy-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.info-icon {
+  opacity: 0.7;
+  transition: opacity 0.2s;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 1;
+  }
+}
