--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 #root {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
   text-align: center;
 }
 
@@ -122,4 +122,27 @@
   background-color: #0d6dfd;
   border: 2px solid white;
   border-radius: 50%;
+}
+
+
+.curved-container {
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+  top: 50%;
+  overflow: hidden;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.curved-header {
+  width: 105%;
+  height: 40%;
+  left: -3%;
+  position: absolute;
+  background-image: linear-gradient(#8459f9, #4c3196);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
 }
