--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 #root {
   margin: 0 auto;
-  padding: 0.5rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -122,29 +122,7 @@
   background-color: #0d6dfd;
   border: 2px solid white;
   border-radius: 50%;
-}
-
-
-.curved-container {
-  background-color: white;
-  border-radius: 10px;
-  position: relative;
-  top: 50%;
-  overflow: hidden;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.curved-header {
-  width: 105%;
-  height: 40%;
-  left: -3%;
-  position: absolute;
-  background-image: linear-gradient(#8459f9, #4c3196);
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 50% 20%;
-  border-bottom-right-radius: 50% 20%;
+  z-index: 10;
 }
 
 .toast-status {
@@ -161,3 +139,15 @@
   padding: 8px 10px;
   border-radius: 8px;
 }
+
+.dock-demo .dock-window {
+  width: 100%;
+  height: 450px;
+  position: relative;
+  background-image: url('https://primefaces.org/cdn/primereact/images/dock/window.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.dock-demo .p-dock {
+  z-index: 1000;
+}  
