--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,34 +29,81 @@
   }
 }
 
+/* ReactFlow Watermark */
+.react-flow__attribution {
+  background: transparent !important; 
+  color: #9ca3af !important; 
+  opacity: 0.6 !important; 
+  font-size: 10px !important;
+}
+
+/* Dark mode over PrimeReact */
+.dark .p-fileupload-content,
+.dark .p-fileupload-buttonbar,
+.dark .p-fileupload-empty {
+  background-color: #1f2937 !important; /* Tailwind bg-gray-800 */
+  color: #f3f4f6 !important;            /* Tailwind text-gray-100 */
+  border-color: #4b5563 !important;     /* dark:border-gray-600 */
+}
+
 
 /* Loader author: https://github.com/Afif13/*/
 .loader {
   display: inline-grid;
   padding: 5px;
   background: #fff;
-  filter: blur(4px) contrast(12);
+  /* filter: blur(4px) contrast(12); */
 }
 
 .loader:before {
   content: "";
   height: 40px;
   aspect-ratio: 3;
-  --c: #0000 64%, #000 66% 98%, #0000 101%;
+
+  /* Light mode colors by default */
+  --dot-color: #000;
+  --bg-color: #0000 64%, var(--dot-color) 66% 98%, #0000 101%;
+
   background:
-    radial-gradient(35% 146% at 50% 159%, var(--c)) 0 0,
-    radial-gradient(35% 146% at 50% -59%, var(--c)) 100% 100%;
+    radial-gradient(35% 146% at 50% 159%, var(--bg-color)) 0 0,
+    radial-gradient(35% 146% at 50% -59%, var(--bg-color)) 100% 100%; 
+
   background-size: calc(200%/3) 50%;
   background-repeat: repeat-x;
   -webkit-mask: repeating-linear-gradient(90deg, #000 0 10%, #0000 0 20%);
   animation: l12 .8s infinite linear;
 }
 
+
+/* Dark mode */
+html.dark .loader {
+  background: #111827; 
+}
+
+html.dark .loader:before {
+  --dot-color: #fff;
+}
+
+/* About */
+html.dark .about-button:hover, .about-button:hover {
+    background-color: #e9499d;/* #e9499d; #040498;  #9B59B6; */
+    color: white;
+    border: none;
+}
+
+
+/* Animation */
 @keyframes l12 {
   to {
     background-position: -200% 0, -100% 100%
   }
 }
+
+/* Card title radius */
+.card-hdr-border {
+  border-radius: 11px 11px 0px 0px;
+}
+
 
 .flip-container {
   perspective: 1000px;
